v1.3/overview/guides.md
---
lastmod: 2020-04-17
old_version: true
date: 2020-04-17
menu:
  community_v1.3:
    parent: "000 Getting Started"
title: Tutorials and Guides
notoc: true
weight: 1000
---
The documentation in this site covers all the functionality of Velonetics API Gateway, but over time we have received from Velonetics users all kinds of tutorials, guides and other resources that illustrate how to do a specific thing. We have included below a few links, but you can share yours.


## User-contributed resources

- [Getting started with Velonetics on Kubernetes / AKS](https://partlycloudy.blog/2021/02/17/getting-started-with-velonetics-on-kubernetes-aks/) by Christian Dennig (Cloud Solution Architect @Microsoft)
- [Microservices with Micronaut, Velonetics and Consul](https://piotrminkowski.com/2021/02/23/microservices-with-micronaut-velonetics-and-consul/) by Piotr Minkowski (Solution Architect @ Red Hat)
- [How to Successfully Set Up Velonetics on GKE: A Step by Step Guide](https://hackernoon.com/how-to-successfully-set-up-velonetics-on-gke-a-step-by-step-guide-ny22311c) by Vijay Savanth on Hackernoon
- [Writing Plugins using Golang](https://www.eventslooped.com/posts/velonetics-writing-plugins/) by Ilya Nemtsev on Eventslooped
- [Building Micro Services with .Net Core + Velonetics API Gateway](https://balramchavan.medium.com/building-micro-services-with-net-core-velonetics-api-gateway-fad036f10298) by Balram Chavan (Engineer @Boehringer Ingelheim)
- [How To Effortlessly Adopt Microservices Using Velonetics](https://betterprogramming.pub/how-to-effortlessly-adopt-microservices-using-velonetics-28c265573877) by Kirshi Yin on BetterProgramming
- [Using a proxy and API gateway to optimize Compass for performance](https://blog.hcltechsw.com/compass/using-a-proxy-and-api-gateway-to-optimize-compass-for-performance/) by Michael Hudson (Technology Director @HCL Software)
- [Configuring Grafana and InfluxDB](https://skalena.github.io/api-methodology/public/cont/velonetics-grafana-influxdb/) by Skalena (Velonetics distributor in Brazil)

If you have written a tutorial, guide or any other material worth sharing with the community, let us know:

<a class="btn btn-secondary" href="https://github.com/velonetics/velonetics-documentation/edit/master/overview/guides.md">
    Add your link
</a>
